# openauth

./: Cargo.toml
src/: main.rs
src/handler/: auth_handler.rs
src/router/: auth_router.rs  mod.rs
src/utils/: config.rs
src/utils/response/: mod.rs
