[package]
name = "openauth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
serde = "1.0.196"
sqlx = "0.7.3"
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[features]
default = ["id"]
id = []
phone = []
email = []
oauth2 = []
